# pollserver

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.txt
src/: main.c  pollserver.c
src/include/: pollserver.h
